[project]
name = "mothree"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vincent D. Warmerdam", email = "vincentwarmerdam@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "anywidget>=0.9.18",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "marimo>=0.16.3",
]
